[ADD] fix processing percent